--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+virtualbox (4.1.2-dfsg-1ubuntu2) UNRELEASED; urgency=low
+
+  * Add the apport hook to the virtualbox-dkms and virtualbox-guest-dkms
+    packages instead of a source package hook to virtualbox.
+
+ -- Felix Geyer <debfx-pkg@fobos.de>  Tue, 20 Sep 2011 22:03:19 +0200
+
 virtualbox (4.1.2-dfsg-1ubuntu1) oneiric; urgency=low
 
   * Merge from Debian unstable, remaining changes:
