--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,7 @@
-virtualbox (4.3.30-dfsg-1+deb8u2) jessie; urgency=medium
+virtualbox (4.3.30-dfsg-1+deb8u2) jessie-security; urgency=medium
 
   [ Ritesh Raj Sarraf ]
-  * Demote virtualbox-dkms | virtualbox-source to pre-depends,
+  * Promote virtualbox-dkms | virtualbox-source to pre-depends,
     needed to fully configure virtualbox kernel module prior
     to reload virtualbox service, avoiding a race condition.
     (Closes: #798527, #798979)
