--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,8 @@
-virtualbox (4.3.30-dfsg-1+deb8u2) jessie-security; urgency=medium
+virtualbox (4.3.32-dfsg-1+deb8u1) jessie-security; urgency=medium
+
+  [ Gianfranco Costamagna ]
+  * New upstream security release.
+    - Addressed CVE-2015-4813 and CVE-2015-4896
 
   [ Ritesh Raj Sarraf ]
   * Move virtualbox-dkms | virtualbox-source to Depends,
