--- a/debian/changelog
+++ b/debian/changelog
@@ -1,16 +1,23 @@
-virtualbox (5.2.22-dfsg-3) UNRELEASED; urgency=medium
+virtualbox (5.2.24-dfsg-1) unstable; urgency=medium
 
   [ Robert Edmonds <edmonds@debian.org> ]
   * Add rdesktop-vrdp package (Closes: #914165)
 
-  [ Gianfranco Costamagna ]
-  * debian/patches/VBoxVNC.fix.patch: LP: #1804048
-    - thanks AZ for the patch, that is now part of upstream codebase
-
   [ Kevin Locke ]
   * Add udev rules for vboxdrvu and vboxnetctl (Closes: #916464)
 
- -- Gianfranco Costamagna <locutusofborg@debian.org>  Tue, 18 Dec 2018 15:11:18 +0100
+  [ Gianfranco Costamagna ]
+  * debian/patches/VBoxVNC.fix.patch: LP: #1804048
+    - thanks AZ for the patch, that is now part of upstream codebase
+  [ Gianfranco Costamagna ]
+  * New upstream version 5.2.24-dfsg
+  * Bump std-version to 4.3.0, no changes required
+  * Bump copyright years
+  * Bump more copyright years
+  * Patch refresh, drop upstream patches:
+    - 18-system-xorg, VBoxVNC.fix (has never been part of unstable)
+
+ -- Gianfranco Costamagna <locutusofborg@debian.org>  Tue, 15 Jan 2019 22:07:39 +0100
 
 virtualbox (5.2.22-dfsg-2) unstable; urgency=low
 
