--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+virtualbox (5.2.24-dfsg-2) unstable; urgency=medium
+
+  * Add patch from 6 branch for gcc weirdness about asm inline
+
+ -- Gianfranco Costamagna <locutusofborg@debian.org>  Wed, 16 Jan 2019 09:49:38 +0100
+
 virtualbox (5.2.24-dfsg-1) unstable; urgency=medium
 
   [ Robert Edmonds <edmonds@debian.org> ]
