--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+virtualbox (7.0.14-dfsg-3) unstable; urgency=medium
+
+  * Install man page for help (LP: #2054788)
+
+ -- Gianfranco Costamagna <locutusofborg@debian.org>  Tue, 27 Feb 2024 11:13:01 +0100
+
 virtualbox (7.0.14-dfsg-2) unstable; urgency=medium
 
   * Cherry-pick upstream fixes for kernel 6.8 and USBSAN (LP: #2053024
