--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,21 @@
+virtualbox (7.0.16-dfsg-1) unstable; urgency=medium
+
+  * New upstream version 7.0.16-dfsg
+  * Update get-orig-source script
+  * Drop patches part of upstream codebase:
+    - 102989
+    - 102990
+    - 102992
+    - 102993
+    - 102994
+    - 102999
+    - 103024
+    - 103066
+    - 103067
+    - fix-kernel-build gcc-13
+
+ -- Gianfranco Costamagna <locutusofborg@debian.org>  Tue, 16 Apr 2024 23:14:45 +0200
+
 virtualbox (7.0.14-dfsg-4) unstable; urgency=medium
 
   * Add patch from Xu Zhen (xuzhen666) to fix kernel module build LP: #2053024)
