--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+virtualbox (7.0.16-dfsg-2) unstable; urgency=medium
+
+  * Update manpages
+
+ -- Gianfranco Costamagna <locutusofborg@debian.org>  Wed, 17 Apr 2024 08:41:38 +0200
+
 virtualbox (7.0.16-dfsg-1) unstable; urgency=medium
 
   * New upstream version 7.0.16-dfsg
