--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+virtualbox (7.0.16-dfsg-3) unstable; urgency=medium
+
+  * Add patch 162843 to fix an host crash with some network modes.
+
+ -- Gianfranco Costamagna <locutusofborg@debian.org>  Fri, 26 Apr 2024 12:51:11 +0200
+
 virtualbox (7.0.16-dfsg-2) unstable; urgency=medium
 
   * Update manpages
