--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+virtualbox (7.0.16-dfsg-6) unstable; urgency=medium
+
+  * Add versioning to breaks/replaces
+
+ -- Gianfranco Costamagna <locutusofborg@debian.org>  Thu, 02 May 2024 20:25:27 +0200
+
 virtualbox (7.0.16-dfsg-5) unstable; urgency=medium
 
   * Add -hwe as transitional packages (To be dropped after 26.04)
