Update changelog again

--- a/debian/changelog
+++ b/debian/changelog
@@ -10,8 +10,9 @@ virtualbox (7.0.16-dfsg-7) unstable; urgency=medium
   * Drop debug symbols migration code.
   * Bump compat level to 13
   * Drop trailing whitespace
+  * Bump std-version to 4.7.0
 
- -- Gianfranco Costamagna <locutusofborg@debian.org>  Fri, 03 May 2024 08:42:58 +0200
+ -- Gianfranco Costamagna <locutusofborg@debian.org>  Fri, 03 May 2024 08:46:00 +0200
 
 virtualbox (7.0.16-dfsg-6) unstable; urgency=medium
 
