--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+virtualbox (7.0.18-dfsg-1) unstable; urgency=medium
+
+  * New upstream version 7.0.18-dfsg
+  * Fixup link for tarball import
+
+ -- Gianfranco Costamagna <locutusofborg@debian.org>  Fri, 03 May 2024 16:44:26 +0200
+
 virtualbox (7.0.16-dfsg-9) unstable; urgency=medium
 
   * Drop old NEWS file
