--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+virtualbox (7.0.18-dfsg-2) unstable; urgency=medium
+
+  * Set back R^3: no
+
+ -- Gianfranco Costamagna <locutusofborg@debian.org>  Thu, 06 Jun 2024 19:42:13 +0200
+
 virtualbox (7.0.18-dfsg-1) unstable; urgency=medium
 
   * New upstream version 7.0.18-dfsg
