--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+virtualbox (7.0.20-dfsg-1) unstable; urgency=medium
+
+  * New upstream version 7.0.20-dfsg
+
+ -- Gianfranco Costamagna <locutusofborg@debian.org>  Tue, 16 Jul 2024 17:48:29 +0200
+
 virtualbox (7.0.18-dfsg-2) unstable; urgency=medium
 
   * Set back R^3: no
