--- a/debian/changelog
+++ b/debian/changelog
@@ -2,8 +2,9 @@ virtualbox (7.1.0-dfsg-1) UNRELEASED; urgency=medium
 
   * New upstream version 7.1.0-dfsg
   * Refresh patches
+  * Add libfuse2 runtime dependency (Closes: #1082889), thanks Marco Moock for the report
 
- -- Gianfranco Costamagna <locutusofborg@debian.org>  Thu, 12 Sep 2024 09:33:56 +0200
+ -- Gianfranco Costamagna <locutusofborg@debian.org>  Tue, 08 Oct 2024 13:49:59 +0200
 
 virtualbox (7.0.20-dfsg-1) unstable; urgency=medium
 
